implement filtering  + endpoint (GET /v1/movies)
